--- a/composer.json
+++ b/composer.json
@@ -11,19 +11,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.4",
-        "ext-json": "*",
-        "laravel/framework": "^7.0"
+        "laravel/framework": "^7.0",
+        "falbar/helper-json": "^1.0"
     },
     "autoload": {
         "psr-4": {
             "Falbar\\SystemLog\\": "src"
-        }
-    },
-    "extra": {
-        "laravel": {
-            "providers": [
-                "Falbar\\SystemLog\\Providers\\LogServiceProvider"
-            ]
         }
     }
 }
