--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     "homepage": "http://falbar.ru/",
     "license": "MIT",
     "require": {
-        "php": "^7.4",
+        "php": "^7.4|^8.0",
         "laravel/framework": "^7.0",
         "falbar/helper-json": "^1.0"
     },
