--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.4|^8.0",
-        "laravel/framework": "^7.0|^8.0",
+        "laravel/framework": "^7.0|^8.0|^9.0",
         "falbar/helper-json": "^1.0"
     },
     "autoload": {
