--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     "homepage": "http://falbar.ru/",
     "license": "MIT",
     "require": {
-        "php": "^7.4|^8.0",
-        "laravel/framework": "^7.0|^8.0|^9.0",
+        "php": "^8.1",
+        "laravel/framework": "^9.0|^10.0",
         "falbar/helper-json": "^1.0"
     },
     "autoload": {
