--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "falbar/laravel-system-log",
+    "name": "akbsit/laravel-system-log",
     "description": "Write logs data in app.",
     "keywords": [
         "laravel",
@@ -7,16 +7,15 @@
         "log",
         "files"
     ],
-    "homepage": "http://falbar.ru/",
     "license": "MIT",
     "require": {
         "php": "^8.1",
         "laravel/framework": "^9.0|^10.0",
-        "falbar/helper-json": "^1.0"
+        "akbsit/helper-json": "^1.0"
     },
     "autoload": {
         "psr-4": {
-            "Falbar\\SystemLog\\": "src"
+            "Akbsit\\SystemLog\\": "src"
         }
     }
 }
